--- a/styles.scss
+++ b/styles.scss
@@ -81,7 +81,7 @@ main {
 header {
   background-color: $theme;
   color: $light-color;
-  padding: 10vh 0 7.5vh 0;
+  padding: 7.5vh 0 5vh 0;
   .icon {
     width: 5rem;
     margin: 0 2rem 2rem 0;
@@ -122,7 +122,8 @@ a + a {
   margin-left: 1.5rem;
 }
 
-h2, h3 {
+h2,
+h3 {
   font-weight: 700;
   font-size: 90%;
   text-transform: uppercase;
