:sparkles: Theme last modified content

--- a/styles.scss
+++ b/styles.scss
@@ -221,6 +221,11 @@ pre {
   font-size: 70% !important;
 }
 
+.post-footer {
+  opacity: 0.75;
+  font-size: 80%;
+}
+
 @media (max-width: 500px) {
   main,
   div {
