:sparkles: Add more content

--- a/styles.scss
+++ b/styles.scss
@@ -208,6 +208,7 @@ blockquote {
 }
 
 code {
+  display: inline-block;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   background-color: whitesmoke;
   color: #ab2323;
